Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ftptomongo-ingress
spec:
  rules:
    - host: 34.149.13.182  # Replace with your IP address
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ftptomongo  # Replace with your service name
                port:
                  number: 2121
  ingressClassName: "gce"
  externalTrafficPolicy: Cluster
